--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">定位助手</string>
+    <string name="location_not_enabled">定位开关未打开</string>
+    <string name="open_location_settings">打开定位</string>
+    <string name="cancel">取消</string>
 </resources>
